app/DistributionPackages/MyVendor.AwesomeNeosProject/Resources/Private/Fusion/Presentation/Components/Image/_Image.scss
@use "AbstractStyles/Variables/Colors";

img {
    max-width: 100%;
    height: auto;
}

.image {
    width: 100%;
    height: 100%;
    display: flex;
    flex-wrap: wrap;

    &--left {
        justify-content: flex-start;
    }

    &--center {
        justify-content: center;
    }

    &--right {
        justify-content: flex-end;
    }

    picture {
        display: inline-block;
        margin: auto;
        width: 100%;
        height: 100%;
    }
}

.image__description {
    display: block;
    width: 100%;

    font-size: 0.8rem;
    text-align: left;
    color: Colors.$grey--light;
}

